# raylib-namespace-wrapper

./: .gitignore  CMakeLists.txt  README.md
cmake/: raylibwrapper-config.cmake.in
docs/: BUILD.md
include/RaylibWrapper/: RaylibWrapper.hpp  c_api.h  export_shared.h
src/: RaylibWrapper.cpp  c_api.cpp
tools/: generate_c_api.py
